<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context=".MainActivity">

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_weight="4"-->
    <!--        android:gravity="center"-->
    <!--        android:orientation="vertical">-->

    <!--        <Button-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/limited_cnt" />-->

    <!--        <Button-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/infinite_cnt" />-->

    <!--    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_points_round" />

        <com.google.android.material.slider.Slider
            android:id="@+id/max_points_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="@string/incr_points_cnt"
            android:valueFrom="@string/start_points_cnt"
            android:valueTo="@string/end_points_cnt"
            app:labelBehavior="floating" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_players" />

        <com.google.android.material.slider.Slider
            android:id="@+id/player_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="@string/incr_player_cnt"
            android:valueFrom="@string/start_player_cnt"
            android:valueTo="@string/end_player_cnt"
            app:labelBehavior="floating" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center">

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_game" />

    </LinearLayout>

</LinearLayout>